# linux_programming_interface

./: CMakeLists.txt
dirs_links/: CMakeLists.txt
dirs_links/src/: list_files.c  nftw_dir_tree.c  t_dirbasename.c  t_unlink.c  view_symlink.c
fileio/: CMakeLists.txt
fileio/src/: copy.c  seek_io.c  t_readv.c
filelock/: CMakeLists.txt  i_fcntl_locking.c  t_flock.c
files/: CMakeLists.txt
files/src/: t_chown.c  t_stat.c  t_umask.c
filesys/: CMakeLists.txt
filesys/src/: t_mount.c
getopt/: CMakeLists.txt
getopt/src/: .t_getopt.c.swp  t_getopt.c
include/lpi/: Bool.h  Error.h  FilePerms.h  Math.h  SignalFunctions.h
inotify/: CMakeLists.txt
inotify/src/: demo_inotify.c
memalloc/: CMakeLists.txt
memalloc/src/: free_and_sbrk.c
mmap/: CMakeLists.txt  anon_mmap.c  mmcat.c  t_mmap.c
pipes/: CMakeLists.txt  fifo_seqnum.h  fifo_seqnum_client.c  fifo_seqnum_server.c  pipe_ls_wc.c  pipe_sync.c  simple_pipe.c
pmsg/: CMakeLists.txt  mq_notify_sig.c  mq_notify_thread.c  pmsg_create.c  pmsg_getattr.c  pmsg_receive.c  pmsg_send.c  pmsg_unlink.c
proc/: CMakeLists.txt
proc/src/: display_env.c  longjmp.c  modify_env.c
proccred/: CMakeLists.txt
proccred/src/: idshow.c
procexec/: CMakeLists.txt  fork_file_sharing.c  multi_wait.c  t_acct_on.c  t_fork.c
psem/: CMakeLists.txt  psem_create.c  psem_getvalue.c  psem_post.c  psem_unlink.c  psem_wait.c
pshm/: CMakeLists.txt  pshm_create.c  pshm_read.c  pshm_unlink.c  pshm_write.c
signals/: CMakeLists.txt
signals/src/: catch_rtsigs.c  intquit.c  nonreentrant.c  ouch.c  sig_receiver.c  sig_sender.c  sigmask_longjmp.c  t_kill.c  t_sigaltstack.c  t_sigqueue.c
sockets/: CMakeLists.txt  i6d_ucase.h  i6d_ucase_cl.c  i6d_ucase_sv.c  is_seqnum.h  is_seqnum_cl.c  is_seqnum_sv.c  ud_case.h  ud_case_cl.c  ud_case_sv.c  us_xfr.h  us_xfr_cl.c  us_xfr_sv.c
src/: Error.c  FilePerms.c  SignalFunctions.c
svipc/: CMakeLists.txt  svmsg_create.c  svmsg_demo_server.c  svmsg_file.h  svmsg_file_client.c  svmsg_file_server.c  svmsg_receive.c  svmsg_rm.c  svmsg_send.c
svsem/: CMakeLists.txt  semun.h  svsem_demo.c  svsem_mon.c  svsem_setall.c
svshm/: CMakeLists.txt  binary_sems.c  binary_sems.h  svshm_xfr.h  svshm_xfr_reader.c  svshm_xfr_writer.c
sysinfo/: CMakeLists.txt
sysinfo/src/: procfs_pidmax.c  t_uname.c
syslim/: CMakeLists.txt
syslim/src/: t_fpathconf.c  t_sysconf.c
tests/: CMakeLists.txt  test_FilePerms.c
threads/: CMakeLists.txt  simple_thread.c  thread_cleanup.c  thread_incr.c  thread_incr_mutex.c  thread_multijoin.c
time/: CMakeLists.txt
time/src/: calendar_time.c  process_time.c  show_time.c
users_groups/: CMakeLists.txt
users_groups/src/: check_passwd.c
xattr/: CMakeLists.txt
xattr/src/: xattr_view.c
